# inhomogeneous_poisson_process

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  test_debug.py  test_loocv_fix.py
.claude/skills/: ejdb-open-paper.md
bayesian_statistics/: 01_mcmc.ipynb  02_bayesian_logistic_regression.ipynb  02_logistic_regression.ipynb  03_bayesian_IPP.ipynb  03_likelihood_1d_IPP.ipynb  04_bayesian_1d_IPP.ipynb  04_bayesian_1d_IPP.py  05_visualize_beta_posterior.ipynb  10_2_calculate_distance.py  10_calculate_distance.py  12_obsedian_first_model.ipynb  12_obsedian_first_model.py  16_tobler_distance.py  bayesian_1d_exact.py  bayesian_1d_with_approx.py  beta_estimated.csv  model3_bayes_nw.py  model3_bayesian_spatial.py  model3_compositional_metrics.py  model3_config.py  model3_fixed_bayesian_spatial_multinomial.py  model3_ipp.py  model3_ksbp.py  model3_loocv.py  model3_nadaraya_watson.py  model3_preprocessing.py  model3_visualization.py  utils.py  utils_2.py  utils_3.py
bayesian_statistics/experiments/: README.md  __init__.py  config.py  output.py  run_all.py
bayesian_statistics/models/: README.md  __init__.py
bayesian_statistics/nngp/: __init__.py
docs/: .latexmkrc  0614_handout.tex  0629_todo.md  0701_presentation_draft.tex  241213_resume.tex  251013_seminar.tex  251024_resume.tex  251209_seminar.tex  251220_marked_point_process.tex  bayesian_nw_model.md  distance_prior_multinomial_model.md  ksbp_0531_0614_short.tex  ksbp_presentation.tex  ksbp_rehearsal_improvement_plan.md  model3_evaluation_implementation_plan.md  model3_evaluation_strategy.md  model3_refactor_design.md  model3_refactoring_plan.md  model_description.md  nngp_model_description.md  nngp_multinomial_model.md  outline.md  presentation.tex  ref.bib  replacement_slides.tex
docs/251220_marked_markdown/: 2.md  3.md  4.md  5.md  6.md  7.md  8.md  9,md  9.md
docs/implementation/: 260105_marked_point_process_understanding.md  CODEBASE_ANALYSIS.md  (+1 more)
docs/literature/: README.md  (+38 more)
notebooks/: 01_spatiotemporal_bayesian_IPP.ipynb  02_bayesian_logistic_regression.ipynb  03_likelihood_1d_IPP.ipynb  04_bayesian_1d_IPP.ipynb  05_visualize_beta_posterior.ipynb  06_bayesian_1d_exact.ipynb  07_bayesian_2d.ipynb  08_obsedian_first_model.ipynb  08_obsedian_old_data.ipynb  08_obsidian_old_data.ipynb  09_obsedian_preprocess.ipynb  09_obsidian_preprocess_1.ipynb  10_1_obsidian_preprocess_2.ipynb  10_obsedian_preprocess_2.ipynb  11_obsedian_first_model.ipynb  11_obsedian_preprocess_3.ipynb  11_obsidian_preprocess_3.ipynb  12_model_1st.ipynb  13_visualize_model_1st.ipynb  13_visualize_obsedian_first_model.ipynb  14_model_2nd.ipynb  15_visualize_model_2st.ipynb  16_model3_evaluation_debug.ipynb  16_model_3rd.ipynb  16_model_3rd_refactored_hyperparameter.ipynb  16_tobler_distance.ipynb  17_visualize_model_3rd.ipynb  18_experiment_nonparbayes.ipynb  19_model3_hyperparameter_optimization_loocv.ipynb  19_model_4.ipynb  19_visualize_hyperparameter_results.ipynb  20_model_DDP copy.ipynb  20_model_DDP.ipynb  20_model_KSBP.ipynb  22_bayesian_nw_estimation.ipynb  23_basic_spatio_regression.ipynb  24_model_comparison_refactored.ipynb  25_multinomial_nngp_demo.ipynb  25_multinomial_nngp_plot.ipynb  25_plot.ipynb  (+8 more)
output/: beta_estimated.csv  beta_list.csv  beta_samples.h5
(+145 files in other folders)
