[tool.poetry]
name = "bayesian-statistics"
version = "0.1.0"
description = ""
authors = ["ARUOHTA <otaru1214@gmail.com>"]
readme = "README.md"
packages = [
    { include = "bayesian_statistics" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
pandas = "^2.2.2"
tqdm = "^4.66.4"
scipy = "1.12.0"
matplotlib = "^3.8.4"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.2"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"
h5py = "^3.11.0"
arviz = "0.17.1"
pypolyagamma = "^1.2.3"
polars = "^1.9.0"
geopandas = "^1.0.1"
contextily = "^1.6.2"
kepler = "^0.0.1"
keplergl = "^0.3.2"
japanize-matplotlib = "^1.1.3"
pyarrow = "^18.1.0"
shapely = "^2.0.6"
numba = "^0.60.0"
jismesh = "^2.1.0"
pyvisgraph = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
