[project]
name = "bayesian-statistics"
version = "0.1.0"
description = ""
authors = [
    {name = "ARUOHTA", email = "otaru1214@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "scipy==1.12.0",
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
    "scikit-learn>=1.4.2",
    "statsmodels>=0.14.2",
    "seaborn>=0.13.2",
    "h5py>=3.11.0",
    "arviz==0.17.1",
    "polars>=1.9.0",
    "geopandas>=1.0.1",
    "contextily>=1.6.2",
    "kepler>=0.0.1",
    "keplergl>=0.3.2",
    "japanize-matplotlib>=1.1.3",
    "pyarrow>=18.1.0",
    "shapely>=2.0.6",
    "numba>=0.60.0",
    "jismesh>=2.1.0",
    "pyvisgraph>=0.2.1",
    "gpy>=1.13.2",
    "pymc>=5.12.0",
    "pypolyagamma>=1.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nbqa>=1.9.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"
extend-include = ["*.ipynb"]  # Jupyter notebookもチェック

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "B"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E402",  # Module level import not at top (notebooks often need this)
    "F401",  # Imported but unused (common in notebooks)
    "B018",  # Found useless expression (notebooks often have exploration code)
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E402",  # Module level import not at top
    "F401",  # Imported but unused
    "F811",  # Redefined while unused
    "B018",  # Found useless expression
    "C901",  # Function is too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
